--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="a4IMpY16VqAu1y3WciqBghkx0h1_dvKVzbCsvblx9vI" />
     <title>테토-에겐 성격유형 테스트</title>
     <style>
         * {
