--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="a4IMpY16VqAu1y3WciqBghkx0h1_dvKVzbCsvblx9vI" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3680895730982772"
+     crossorigin="anonymous"></script>
     <title>테토-에겐 성격유형 테스트</title>
     <style>
         * {
