--- a/teto-egen-complete.html
+++ b/teto-egen-complete.html
@@ -9,6 +9,9 @@
     <meta property="og:title" content="테토-에겐 성격유형 테스트">
     <meta property="og:description" content="나는 테토형일까? 에겐형일까? 지금 바로 테스트해보세요!">
     <meta property="og:type" content="website">
+    <meta name="google-site-verification" content="a4IMpY16VqAu1y3WciqBghkx0h1_dvKVzbCsvblx9vI" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3680895730982772"
+     crossorigin="anonymous"></script>
     <title>테토-에겐 성격유형 테스트 | 나는 테토형일까? 에겐형일까?</title>
     
     <style>
